--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 
 <!-- FOOTER -->
 <footer class="bg-dark text-white text-center p-3">
-© Codesteem Clone — Practice Only
+© EquadLabs
 </footer>
 
 <!-- Scripts -->
