--- a/index.html
+++ b/index.html
@@ -3,60 +3,121 @@
 <head>
 <meta charset="UTF-8">
 <title>EquadLabs</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <!-- Bootstrap -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
-<!-- AOS Animation -->
-<link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet">
-
 <!-- Font Awesome -->
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
 
+<!-- AOS -->
+<link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet">
+
 <style>
-/* NAVBAR */
-.navbar {
-    background:#0d1b2a;
+body{
+    font-family: "Segoe UI", sans-serif;
 }
-.navbar a { color:white !important; }
+
+/* NAVBAR */
+.navbar{
+    background:#2f2f2f;
+    padding:14px 0;
+}
+.navbar-brand{
+    font-weight:700;
+    font-size:22px;
+    color:#4fc3f7 !important;
+}
+.nav-link{
+    color:#fff !important;
+    margin:0 12px;
+    font-size:15px;
+}
+.btn-call{
+    background:#000;
+    color:#fff;
+    border-radius:8px;
+    padding:8px 18px;
+}
 
 /* HERO */
-.hero {
-    height: 95vh;
-    background: url("https://images.unsplash.com/photo-1537432376769-00a0c1b3b0c6") center/cover no-repeat;
-    position: relative;
-    color:white;
-}
-.hero::before {
-    content:"";
-    position:absolute;
-    inset:0;
-    background:rgba(13,27,42,0.85);
-}
-.hero-content {
+.hero{
+    min-height:100vh;
+    display:flex;
+    align-items:center;
+    background:#fff;
     position:relative;
-    z-index:2;
 }
-
-/* SERVICES */
-.service-card {
+.hero h1{
+    font-size:52px;
+    font-weight:700;
+    color:#2c3e50;
+}
+.hero h1 span{
+    color:#5bc0eb;
+    font-style:italic;
+}
+.hero p{
+    margin-top:22px;
+    color:#6c7a89;
+    max-width:480px;
+    line-height:1.7;
+}
+.btn-start{
+    background:#34495e;
+    color:#fff;
     border:none;
-    transition:.4s;
-}
-.service-card:hover {
-    transform: translateY(-10px);
-}
-
-/* STATS */
-.stats {
-    background:#0d1b2a;
-    color:white;
+    padding:13px 28px;
+    border-radius:30px;
+    margin-top:25px;
 }
 
-/* CTA */
-.cta {
-    background: linear-gradient(to right,#00b4d8,#0077b6);
-    color:white;
+.btn-start:hover{
+    background:#4fc3f7;
+    color:#0e0d0d;
+    border:none;
+    padding:13px 28px;
+    border-radius:30px;
+    margin-top:25px;
+}
+.btn-call:hover{
+    background:#000000;
+    color:#4fc3f7;
+    border-color: #4fc3f7;
+}
+/* 3D IMAGE */
+.hero-3d{
+    max-width:420px;
+    filter: drop-shadow(0 40px 45px rgba(0,0,0,0.25));
+    animation: float3d 6s ease-in-out infinite;
+    transform-style: preserve-3d;
+    transition: transform .2s ease;
+}
+
+@keyframes float3d{
+    0%{ transform: translateY(0); }
+    50%{ transform: translateY(-25px); }
+    100%{ transform: translateY(0); }
+}
+
+/* SCROLL */
+.scroll-down{
+    position:absolute;
+    bottom:20px;
+    left:50%;
+    transform:translateX(-50%);
+    font-size:14px;
+    color:#999;
+}
+.scroll-down i{
+    display:block;
+    font-size:18px;
+    animation:bounce 1.5s infinite;
+}
+@keyframes bounce{
+    0%,100%{transform:translateY(0)}
+    50%{transform:translateY(8px)}
 }
 </style>
 </head>
@@ -64,32 +125,59 @@
 <body>
 
 <!-- NAVBAR -->
-<nav class="navbar navbar-expand-lg fixed-top">
+<nav class="navbar fixed-top navbar-expand-lg">
 <div class="container">
-    <a class="navbar-brand fw-bold" href="#">EquadLabs</a>
-    <button class="navbar-toggler bg-light" data-bs-toggle="collapse" data-bs-target="#nav">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="nav">
-        <ul class="navbar-nav ms-auto">
-            <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">Courses</a></li>
+    <a class="navbar-brand" href="#">Equad<span class="text-white">Labs</span></a>
+
+    <div class="collapse navbar-collapse justify-content-center">
+        <ul class="navbar-nav">
             <li class="nav-item"><a class="nav-link" href="#">Services</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">About</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">Portfolio</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">Membership</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">Blogs</a></li>
         </ul>
     </div>
+
+    <a href="#" class="btn btn-call">Book a call</a>
 </div>
 </nav>
 
 <!-- HERO -->
-<section class="hero d-flex align-items-center">
-<div class="container hero-content text-center">
-    <h1 data-aos="fade-up" data-aos-delay="100">Learn Coding From Experts</h1>
-    <p data-aos="fade-up" data-aos-delay="300">Professional IT training & development services</p>
-    <button class="btn btn-info px-4 text-white" data-aos="zoom-in" data-aos-delay="500">
-        Get Started
-    </button>
+<section class="hero">
+<div class="container">
+<div class="row align-items-center">
+
+    <!-- LEFT -->
+    <div class="col-md-6" data-aos="fade-right">
+        <h1>
+            We Build Software <br>
+            <span>That Empowers</span><br>
+            Your Business
+        </h1>
+
+        <p>
+            We're a software company that builds innovative digital solutions and
+            scalable platforms for forward-thinking businesses.
+        </p>
+
+        <button class="btn btn-start">Start a Project</button>
+    </div>
+
+    <!-- RIGHT -->
+    <div class="col-md-6 text-center" data-aos="fade-left">
+        <!-- REAL 3D IMAGE -->
+        <img 
+            src="/img.png"
+            class="img-fluid hero-3d"
+            alt="3D Object">
+    </div>
+
+</div>
+</div>
+
+<div class="scroll-down">
+    
+    <i class="fa fa-angle-down"></i>
 </div>
 </section>
 
@@ -97,28 +185,57 @@
 <section class="py-5">
 <div class="container text-center">
     <h2 class="mb-5" data-aos="fade-up">Our Services</h2>
+
     <div class="row g-4">
+
         <div class="col-md-4" data-aos="fade-up" data-aos-delay="100">
             <div class="card service-card p-4">
                 <i class="fa fa-code fa-2x text-primary mb-3"></i>
                 <h5>Web Development</h5>
-                <p>Modern websites & systems</p>
+                <p>Modern websites, portals & enterprise systems</p>
             </div>
         </div>
+
         <div class="col-md-4" data-aos="fade-up" data-aos-delay="200">
             <div class="card service-card p-4">
-                <i class="fa fa-mobile fa-2x text-primary mb-3"></i>
-                <h5>Mobile Apps</h5>
-                <p>Flutter Android & iOS apps</p>
+                <i class="fa fa-mobile-screen fa-2x text-primary mb-3"></i>
+                <h5>Mobile App Development</h5>
+                <p>Flutter Android & iOS applications</p>
             </div>
         </div>
+
         <div class="col-md-4" data-aos="fade-up" data-aos-delay="300">
             <div class="card service-card p-4">
-                <i class="fa fa-graduation-cap fa-2x text-primary mb-3"></i>
-                <h5>IT Training</h5>
-                <p>Career-oriented training</p>
+                <i class="fa fa-desktop fa-2x text-primary mb-3"></i>
+                <h5>Desktop App Development</h5>
+                <p>Windows & cross-platform desktop software</p>
             </div>
         </div>
+
+        <div class="col-md-4" data-aos="fade-up" data-aos-delay="400">
+            <div class="card service-card p-4">
+                <i class="fa fa-brain fa-2x text-primary mb-3"></i>
+                <h5>AI Services</h5>
+                <p>Artificial Intelligence & smart automation</p>
+            </div>
+        </div>
+
+        <div class="col-md-4" data-aos="fade-up" data-aos-delay="500">
+            <div class="card service-card p-4">
+                <i class="fa fa-user-tie fa-2x text-primary mb-3"></i>
+                <h5>IT Consulting</h5>
+                <p>Business solutions & technology strategy</p>
+            </div>
+        </div>
+
+        <div class="col-md-4" data-aos="fade-up" data-aos-delay="600">
+            <div class="card service-card p-4">
+                <i class="fa fa-graduation-cap fa-2x text-primary mb-3"></i>
+                <h5>Professional Training</h5>
+                <p>Job-oriented IT & software training</p>
+            </div>
+        </div>
+
     </div>
 </div>
 </section>
@@ -128,10 +245,10 @@
 <div class="container">
     <div class="row">
         <div class="col-md-4" data-aos="zoom-in">
-            <h2>500+</h2><p>Students</p>
+            <h2>500+</h2><p>Project Completed</p>
         </div>
         <div class="col-md-4" data-aos="zoom-in" data-aos-delay="150">
-            <h2>30+</h2><p>Courses</p>
+            <h2>30+</h2><p>Happy Clients</p>
         </div>
         <div class="col-md-4" data-aos="zoom-in" data-aos-delay="300">
             <h2>95%</h2><p>Success Rate</p>
@@ -143,12 +260,12 @@
 <!-- CTA -->
 <section class="cta py-5 text-center">
 <h2 data-aos="fade-up">Start Your IT Career Today</h2>
-<button class="btn btn-light mt-3" data-aos="zoom-in">Enroll Now</button>
+<button class="btn  btn-start btn-light mt-3" data-aos="zoom-in">Enroll Now</button>
 </section>
 
 <!-- FOOTER -->
 <footer class="bg-dark text-white text-center p-3">
-© EquadLabs
+© 2026 EquadLabs. All Rights Reserved.
 </footer>
 
 <!-- Scripts -->
@@ -158,8 +275,18 @@
 
 <script>
 AOS.init({
-    duration: 1000,
-    once: true
+    duration:1200,
+    once:true
+});
+
+/* Mouse tilt effect */
+$('.hero-3d').on('mousemove', function(e){
+    const x = (e.offsetX / $(this).width()) * 20 - 10;
+    const y = (e.offsetY / $(this).height()) * 20 - 10;
+    $(this).css('transform', `rotateX(${-y}deg) rotateY(${x}deg)`);
+});
+$('.hero-3d').on('mouseleave', function(){
+    $(this).css('transform','rotateX(0) rotateY(0)');
 });
 </script>
 
