--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@ body{
 }
 
 .btn-start:hover{
-    background:#4fc3f7;
-    color:#0e0d0d;
-    border:none;
+    background:#000000;
+    color:#4fc3f7;
+    border-color: #4fc3f7;
     padding:13px 28px;
     border-radius:30px;
     margin-top:25px;
