--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@ body{
         <ul class="navbar-nav">
             <li class="nav-item"><a class="nav-link" href="#">Services</a></li>
             <li class="nav-item"><a class="nav-link" href="#">Portfolio</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">Membership</a></li>
             <li class="nav-item"><a class="nav-link" href="#">Blogs</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">Contact Us</a></li>
         </ul>
     </div>
 
@@ -156,7 +156,7 @@ body{
         </h1>
 
         <p>
-            We're a software company that builds innovative digital solutions and
+            We're a Global software company that builds innovative digital solutions and
             scalable platforms for forward-thinking businesses.
         </p>
 
