--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@ body{
         </h1>
 
         <p>
-            We're a Global software company that builds innovative digital solutions and
+            We're a Global Software Company that builds innovative digital solutions and
             scalable platforms for forward-thinking businesses.
         </p>
 
