--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ body{
             <li class="nav-item"><a class="nav-link" href="#">Services</a></li>
             <li class="nav-item"><a class="nav-link" href="#">Portfolio</a></li>
             <li class="nav-item"><a class="nav-link" href="#">Blogs</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">Contact Us</a></li>
+            <li class="nav-item"><a class="nav-link" href="contact.html">Contact Us</a></li>
         </ul>
     </div>
 
