--- a/contact.html
+++ b/contact.html
@@ -69,7 +69,7 @@
                 <li class="nav-item"><a class="nav-link" href="contact.html">Contact Us</a></li>
             </ul>
         </div>
-        <a href="tel:+923190176583" class="btn btn-call">Book a call</a>
+        <a href="https://calendly.com/faisalusman385" class="btn btn-call">Book a call</a>
     </div>
 </nav>
 
