--- a/service.html
+++ b/service.html
@@ -165,7 +165,7 @@ footer a:hover .fas{
 <!-- ===== HEADER ===== -->
 <section class="services-header">
     <div class="container">
-        <h1>Our Services</h1>
+               <h1><span style="font-style: italic;">Our</span> <span style="color: #5bc0eb;font-style: italic;">Services</span></h1>
         <p>
             We build high-impact digital products that help businesses scale,
             automate, and compete in a fast-moving digital world.
